--- a/po/sr.po
+++ b/po/sr.po
@@ -1,20 +1,18 @@
-# translation of 22-02-2004_sr.po to Serbian
-# translation of sr_rad.po to Srpski
 # Serbian language file for Bluefish.
 # Copyright (C)  2000, 2004 Free Software Foundation, Inc.
 # Marko Milenović <raven@sbb.co.yu>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 22-02-2004_sr\n"
-"POT-Creation-Date: 2004-03-24 19:10+0100\n"
-"PO-Revision-Date: 2004-02-23 13:33+0100\n"
+"Project-Id-Version: true_sr\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-26 01:19-0300\n"
+"PO-Revision-Date: 2004-03-27 00:47+0100\n"
 "Last-Translator: Marko Milenović <raven@sbb.co.yu>\n"
-"Language-Team: Serbian <raven@sbb.co.yu>\n"
+"Language-Team: not a member <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.0.2\n"
 
 #: ../src/about.c:123
@@ -78,6 +76,42 @@ msgid ""
 "\n"
 "Thanks to all who helped making this software available.\n"
 msgstr ""
+"Vođa projekta:\n"
+"  Olivier Sessink <olivier@bluefish.openoffice.nl>\n"
+"\n"
+"Razvoj ovog izdanja:\n"
+"  Jim Hayward <jimhayward@linuxexperience.com>\n"
+"  Oskar Świda <swida@aragorn.pb.bialystok.pl>\n"
+"  Christian Tellefsen <christian@tellefsen.net>\n"
+"  Eugene Morenko(More) <more@irpin.com>\n"
+"\n"
+"Razvoj prethodnih izdanja:\n"
+"  Chris Mazuc\n"
+"  Neil Millar\n"
+"  Gero Takke\n"
+"  Bo Forslund\n"
+"  David Arno\n"
+"  Pablo De Napoli\n"
+"  Santiago Capel Torres\n"
+"  Rasmus Toftdahl Olesen <rto@pohldata.dk>\n"
+"  Roland Steinbach <roland@netzblick.de>\n"
+"  Christian Tellefsen <chris@tellefsen.net>\n"
+"  Antti-Juhani Kaijanaho\n"
+"\n"
+"Dokumentacija:\n"
+"  Alastair Porter <alastair@linuxexperience.com>\n"
+"  Daniel Blair <joecamel@realcoders.org>\n"
+"  Denny Reeh\n"
+"\n"
+"Održavanje paketa:\n"
+"  Debian:   Davide Puricelli <evo@debian.org>\n"
+"  Redhat:   Matthias Haase <matthias_haase@bennewitz.com>\n"
+"  Mandrake: Todd Lyons <todd@mrball.net>\n"
+"\n"
+"Ako znate bilo koga ko je izostavljen sa ove liste javite nam na\n"
+"<bluefish@bluefish.openoffice.nl>\n"
+"\n"
+"Hvala svima koji su pomogli da ovaj softver bude dostupan svima.\n"
 
 #: ../src/about.c:161
 msgid ""
@@ -85,6 +119,9 @@ msgid ""
 "\n"
 "  Brazilian Portuguese - Anderson Rocha\n"
 "   <anderson@maxlinux.com.br>\n"
+"\n"
+"  Bulgarian - Peio Popov\n"
+"   <peio@peio.org>\n"
 "\n"
 "  Chinese - Ting Yang (Dormouse)\n"
 "   <mouselinux@163.com>\n"
@@ -107,6 +144,9 @@ msgid ""
 "  Italian - Stefano Canepa\n"
 "   <sc@linux.it>\n"
 "\n"
+"  Norwegian - Christian Tellefsen\n"
+"   <chris@tellefsen.net>\n"
+"\n"
 "  Polish - Oskar Swida\n"
 "   <swida@aragorn.pb.bialystok.pl>\n"
 "\n"
@@ -114,7 +154,7 @@ msgid ""
 "   <lopopizarro@netcabo.pt>\n"
 "\n"
 "  Russian - Eugene Rupakov\n"
-"   <rupakov@jet.msk.ru>\n"
+"   <rupakov@jet.msk.su>\n"
 "\n"
 "  Serbian - Marko Milenović\n"
 "   <raven@sbb.co.yu>\n"
@@ -129,21 +169,74 @@ msgid ""
 "   <barathee@yahoo.com>\n"
 "\n"
 msgstr ""
+"Trenutni prevodi:\n"
+"\n"
+"  brazilski portugalski - Anderson Rocha\n"
+"   <anderson@maxlinux.com.br>\n"
+"\n"
+"  bugarski - Peio Popov\n"
+"   <peio@peio.org>\n"
+"\n"
+"  danski - Rasmus Toftdahl Olesen\n"
+"   <rto@pohldata.dk>\n"
+"\n"
+"  finski - Juho Roukala\n"
+"   <j.mr@luukku.com>\n"
+"\n"
+"  francuski - Roméo Viu-Berges\n"
+"   <apostledemencia@free.fr>\n"
+"\n"
+"  italijanski - Stefano Canepa\n"
+"   <sc@linux.it>\n"
+"\n"
+"  kineski - Ting Yang (Dormouse)\n"
+"   <mouselinux@163.com>\n"
+"\n"
+"  mađarski - Péter Sáska\n"
+"   <sasek@ccsystem.hu>\n"
+"\n"
+"  nemački - Roland Steinbach\n"
+"   <roland@netzblick.de>\n"
+"\n"
+"  norveški - Christian Tellefsen\n"
+"   <chris@tellefsen.net>\n"
+"\n"
+"  poljski - Oskar Swida\n"
+"   <swida@aragorn.pb.bialystok.pl>\n"
+"\n"
+"  portugalski - Lopo Pizarro\n"
+"   <lopopizarro@netcabo.pt>\n"
+"\n"
+"  ruski - Eugene Rupakov\n"
+"   <rupakov@jet.msk.su>\n"
+"\n"
+"  srpski - Marko Milenović\n"
+"   <raven@sbb.co.yu>\n"
+"\n"
+"  španski - Walter Oscar Echarri\n"
+"   <wecharri@infovia.com.ar>\n"
+"\n"
+"  švedski - David Smeringe\n"
+"   <david.smeringe@telia.com>\n"
+"\n"
+"  tamil - Murugapandian Barathee\n"
+"   <barathee@yahoo.com>\n"
+"\n"
 
-#: ../src/about.c:194
+#: ../src/about.c:198
 msgid "About Bluefish"
 msgstr "U vezi Bluefish-a"
 
-#: ../src/about.c:226 ../src/fref.c:1416 ../src/fref.c:1700 ../src/fref.c:1787
+#: ../src/about.c:230 ../src/fref.c:1416 ../src/fref.c:1700 ../src/fref.c:1787
 #: ../src/fref.c:1822 ../src/fref.c:2296
 msgid "Info"
 msgstr "Info"
 
-#: ../src/about.c:228
+#: ../src/about.c:232
 msgid "Authors"
 msgstr "Autori"
 
-#: ../src/about.c:229
+#: ../src/about.c:233
 msgid "Translators"
 msgstr "Prevodioci"
 
@@ -175,6 +268,8 @@ msgid ""
 "Bluefish has trouble reading the filenames. Try to set the environment "
 "variable G_BROKEN_FILENAMES=1\n"
 msgstr ""
+"Bluefish ima problema da pročita imena datoteka. Pokušajte da podesite okruženje "
+"za promenljivu G_BROKEN_FILENAMES=1\n"
 
 #: ../src/bfspell.c:346
 msgid "Check Spelling"
@@ -341,56 +436,49 @@ msgid "This bookmark is set in a file that no longer exists."
 msgstr "Marker je postavljen u datoteku koja više ne postoji."
 
 #: ../src/bookmark.c:442
-#, fuzzy, c-format
+#, c-format
 msgid "Do you really want to delete %s?"
-msgstr "Da li stvarno želite da odstranite %s?"
+msgstr "Da li stvarno želite da izbrišete %s?"
 
 #: ../src/bookmark.c:444
 msgid "Delete permanent bookmark."
 msgstr "Obriši stalni marker."
 
 #: ../src/bookmark.c:461
-#, fuzzy
 msgid "Edit bookmark"
-msgstr "Idi na marker"
+msgstr "Uredi maker"
 
 #: ../src/bookmark.c:469
 msgid "Goto bookmark"
 msgstr "Idi na marker"
 
 #: ../src/bookmark.c:477
-#, fuzzy
 msgid "Edit"
-msgstr "/_Uredi"
+msgstr "Uredi"
 
 #: ../src/bookmark.c:481
 msgid "Delete"
 msgstr "Obriši"
 
 #: ../src/bookmark.c:903 ../src/bookmark.c:938 ../src/document.c:1987
-#, fuzzy
 msgid "Add bookmark"
-msgstr "Idi na marker"
+msgstr "Dodaj marker"
 
 #: ../src/bookmark.c:904
-#, fuzzy
 msgid "Cannot add bookmarks in unnamed files."
-msgstr ""
-"Nemoguće je dodati marker u bezimene datoteke.\n"
-"Molim Vas prvo sačuvajte datoteku."
+msgstr "Nemoguće je dodati marker u bezimene datoteke."
 
 #: ../src/bookmark.c:939
 msgid "You already have a bookmark here!"
 msgstr "Već imate marker ovde!"
 
 #: ../src/bookmark.c:944
-#, fuzzy
 msgid "default"
-msgstr "Postavi kao osnovno"
+msgstr "osnovni"
 
 #: ../src/bookmark.c:974
 msgid "temp"
-msgstr ""
+msgstr "privremeno"
 
 #: ../src/bookmark.c:1042
 #, c-format
@@ -402,9 +490,8 @@ msgstr ""
 " %s"
 
 #: ../src/bookmark.c:1044
-#, fuzzy
 msgid "Bookmarks positions could be incorrect."
-msgstr "Pozicije markera mogu biti pogrešne."
+msgstr "Pozicije markera su možda pogrešne."
 
 #: ../src/document.c:254 ../src/gui.c:936 ../src/gui.c:937
 msgid "/Document/Highlight Syntax"
@@ -647,8 +734,7 @@ msgstr ""
 
 #: ../src/document.c:2583
 msgid "Do you want to save the changes made to this untitled file?"
-msgstr ""
-"Žeite li da sačuvate prepravke načinjene na ovoj neimenovanoj datoteci?"
+msgstr "Žeite li da sačuvate prepravke načinjene na ovoj neimenovanoj datoteci?"
 
 #: ../src/document.c:2587
 msgid "Do_n't save"
@@ -946,8 +1032,7 @@ msgstr "Greška"
 msgid ""
 "Perhaps you didn't load a reference, or you did not select a reference to "
 "search in."
-msgstr ""
-"Možda niste učitali reference ili niste izabrali referencu za pretragu."
+msgstr "Možda niste učitali reference ili niste izabrali referencu za pretragu."
 
 #: ../src/fref.c:2282
 msgid "Show info window"
@@ -1490,6 +1575,55 @@ msgstr "/Pogledaj/Pogledaj Glavni meni"
 msgid "/View/View Custom Menu"
 msgstr "/Pogledaj/Pogledaj lični meni"
 
+#: ../src/html2.c:554
+msgid "Cascading StyleSheet dialog"
+msgstr "CSS meni"
+
+#: ../src/html2.c:574
+msgid "_Selector:"
+msgstr "_Birač:"
+
+#: ../src/html2.c:593
+msgid "_Property:"
+msgstr "_Osobine:"
+
+#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
+#: ../src/html_form.c:894
+msgid "_Value:"
+msgstr "_Vrednost:"
+
+#: ../src/html2.c:613
+msgid "Selector"
+msgstr "Birač"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Property"
+msgstr "Osobine"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Value"
+msgstr "Vrednost"
+
+#: ../src/html2.c:631
+msgid " _Add "
+msgstr " _Dodaj "
+
+#: ../src/html2.c:634
+msgid " _Update "
+msgstr " _Ažuriraj "
+
+#: ../src/html2.c:637
+msgid " _Delete "
+msgstr " _Obriši "
+
+#: ../src/html2.c:893 ../src/html2.c:930
+msgid "_Style..."
+msgstr " _Stil..."
+
+#: ../src/html2.c:1087
+msgid "Bluefish: Select color"
+msgstr "Bluefish birač boja"
+
 #: ../src/html.c:356
 msgid "Insert Time"
 msgstr "Ubaci vreme"
@@ -1884,55 +2018,6 @@ msgstr "Jezik:"
 msgid "_Custom:"
 msgstr "_Lični:"
 
-#: ../src/html2.c:554
-msgid "Cascading StyleSheet dialog"
-msgstr "CSS meni"
-
-#: ../src/html2.c:574
-msgid "_Selector:"
-msgstr "_Birač:"
-
-#: ../src/html2.c:593
-msgid "_Property:"
-msgstr "_Osobine:"
-
-#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
-#: ../src/html_form.c:894
-msgid "_Value:"
-msgstr "_Vrednost:"
-
-#: ../src/html2.c:613
-msgid "Selector"
-msgstr "Birač"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Property"
-msgstr "Osobine"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Value"
-msgstr "Vrednost"
-
-#: ../src/html2.c:631
-msgid " _Add "
-msgstr " _Dodaj "
-
-#: ../src/html2.c:634
-msgid " _Update "
-msgstr " _Ažuriraj "
-
-#: ../src/html2.c:637
-msgid " _Delete "
-msgstr " _Obriši "
-
-#: ../src/html2.c:893 ../src/html2.c:930
-msgid "_Style..."
-msgstr " _Stil..."
-
-#: ../src/html2.c:1087
-msgid "Bluefish: Select color"
-msgstr "Bluefish birač boja"
-
 #: ../src/html_form.c:141
 msgid "Form"
 msgstr "Obrazac"
@@ -2326,14 +2411,12 @@ msgid "/Edit/Replace special/_Both Types to HTML Entities"
 msgstr "/Uredi/Zameni (specijalno) /_Oba tipa u HTML Entitete"
 
 #: ../src/menu.c:362
-#, fuzzy
 msgid "/Edit/Replace special/To _Uppercase"
-msgstr "/Uredi/Zameni (specijalno)/Tearoff1 "
+msgstr "/Uredi/Zameni (specijalno)/Velika slova"
 
 #: ../src/menu.c:363
-#, fuzzy
 msgid "/Edit/Replace special/To _Lowercase"
-msgstr "/Uredi/Zameni (specijalno)/Tearoff1 "
+msgstr "/Uredi/Zameni (specijalno)/Mala slova"
 
 #: ../src/menu.c:364
 msgid "/Edit/sep4"
@@ -2352,14 +2435,12 @@ msgid "/Edit/sep5"
 msgstr "/Uredi/sep5"
 
 #: ../src/menu.c:368
-#, fuzzy
 msgid "/Edit/Add _Bookmark"
-msgstr "/_Markeri"
+msgstr "/Uredi/Dodaj marker"
 
 #: ../src/menu.c:369
-#, fuzzy
 msgid "/Edit/sep6"
-msgstr "/Uredi/sep1"
+msgstr "/Uredi/sep6"
 
 #: ../src/menu.c:370
 msgid "/Edit/_Save Settings"
@@ -3490,9 +3571,8 @@ msgid "/Project/Save _as..."
 msgstr "/Projekat/Sačuvaj _kao..."
 
 #: ../src/menu.c:686
-#, fuzzy
 msgid "/Project/Save & _close"
-msgstr "/Projekat/Sačuvaj _kao..."
+msgstr "/Projekat/Sačuvaj & zatvori"
 
 #: ../src/menu.c:687
 msgid "/Project/sep2"
@@ -3552,8 +3632,7 @@ msgstr "/Prozori"
 
 #: ../src/menu.c:1252
 msgid "Could not view file in browser, the file does not yet have a name\n"
-msgstr ""
-"Nemoguće je pogledati datoteku u pretraživaču, datoteka još uvek nema ime\n"
+msgstr "Nemoguće je pogledati datoteku u pretraživaču, datoteka još uvek nema ime\n"
 
 #: ../src/menu.c:1365
 msgid "/External/Outputbox/"
@@ -3986,39 +4065,32 @@ msgid "Clear undo history on save"
 msgstr "Očisti 'Poništi istorijat' pri čuvanju"
 
 #: ../src/preferences.c:1896
-#, fuzzy
 msgid "Bookmark options"
-msgstr "/_Markeri"
+msgstr "Opcije markera"
 
 #: ../src/preferences.c:1901
-#, fuzzy
-msgid "Sort by filename"
-msgstr "Datoteka nema ime"
+msgid "Sort by line number"
+msgstr "Uredi po broju reda"
 
 #: ../src/preferences.c:1902
-#, fuzzy
 msgid "Make permanent by default"
-msgstr "Prikazuj levi meni"
+msgstr "Učini stalnim kao osnovno"
 
 #: ../src/preferences.c:1904
-#, fuzzy
 msgid "full path"
-msgstr "Putanja menija"
+msgstr "cela putanja"
 
 #: ../src/preferences.c:1904
-#, fuzzy
 msgid "path from basedir"
-msgstr "Osnovni direktorijum"
+msgstr "putanja do osnovnog direktorijuma"
 
 #: ../src/preferences.c:1904
-#, fuzzy
 msgid "filename"
-msgstr "Datoteka nema ime"
+msgstr "ime datoteke"
 
 #: ../src/preferences.c:1905
-#, fuzzy
 msgid "Bookmarks filename display"
-msgstr "Markirana datoteka je zatvorena"
+msgstr "Prikaz imena datoteke markera"
 
 #: ../src/preferences.c:1909
 msgid "HTML"
@@ -4285,9 +4357,8 @@ msgid "/Project/Save as..."
 msgstr "/Projekat/Sačuvaj kao..."
 
 #: ../src/project.c:170
-#, fuzzy
 msgid "/Project/Save & close"
-msgstr "/Projekat/Sačuvaj"
+msgstr "/Projekat/Sačuvaj & zatvori"
 
 #: ../src/project.c:171
 msgid "/Project/Edit Project Options..."
@@ -4611,83 +4682,4 @@ msgstr "Kod:"
 msgid "Size:"
 msgstr "Veličina:"
 
-#~ msgid "\n"
-#~ msgstr "\n"
 
-#~ msgid "You already have a bookmark named %s!"
-#~ msgstr "Već imate marker pod imenom %s!"
-
-#~ msgid "Do you want to open it?"
-#~ msgstr "Želite li da je  otvorite?"
-
-#~ msgid "Rename permanent bookmark"
-#~ msgstr "Preimenuj marker."
-
-#~ msgid "Rename temporary bookmark"
-#~ msgstr "Dodaj privremeni marker"
-
-#~ msgid "Rename"
-#~ msgstr "Preimenuj"
-
-#~ msgid "Permanent"
-#~ msgstr "Stalno"
-
-#~ msgid "Add temporary bookmark"
-#~ msgstr "Dodaj privremeni marker"
-
-#~ msgid "Delete all temporary bookmarks."
-#~ msgstr "Obriši sve privremene markere."
-
-#~ msgid "Are you sure?"
-#~ msgstr "Jeste li sigurni?"
-
-#~ msgid "Delete all permanent bookmarks."
-#~ msgstr "Obriši sve privremene markere."
-
-#~ msgid "Are you REALLY sure?"
-#~ msgstr "Jeste li STVARNO sigurni?"
-
-#~ msgid "Add permanent bookmark"
-#~ msgstr "Dodaj stalan marker  "
-
-#~ msgid "/Bookmarks/tearoff1"
-#~ msgstr "/Markeri/tearoff1"
-
-#~ msgid "/Bookmarks/Add _Temporary"
-#~ msgstr "/Markeri/Dodaj _privremeni"
-
-#~ msgid "/Bookmarks/Add _Permanent"
-#~ msgstr "/Markeri/Dodaj _stalni"
-
-#~ msgid "/Bookmarks/sep2"
-#~ msgstr "/Markeri/sep2"
-
-#~ msgid "/Bookmarks/Delete All Temporar_y"
-#~ msgstr "/Markeri/Obriši sve privremene"
-
-#~ msgid "/Bookmarks/Delete All Per_manent"
-#~ msgstr "/Markeri/Obriši sve stalne"
-
-#~ msgid "/Project/_Close & save"
-#~ msgstr "/Projekat/_Zatvori & sačuvaj"
-
-#~ msgid "/Project/Close & save"
-#~ msgstr "/Projekat/ Zatvori & sačuvaj"
-
-#~ msgid "Move"
-#~ msgstr "Pomeri"
-
-#~ msgid "Show all bookmarks"
-#~ msgstr "Prikaži sve markere"
-
-#~ msgid "Show bookmarks for opened files"
-#~ msgstr "Prikaži markere za otvorene datoteke"
-
-#~ msgid "Show bookmarks for active file"
-#~ msgstr "Prikaži markere za aktivne datoteke"
-
-#~ msgid "You can overwrite next temp bookmark (number %d). Overwrite?"
-#~ msgstr "Možete obrisati sledeći privremeni marker (broj %d). Prepisati?"
-
-#~ msgid "Maximum number of temp bookmarks assigned"
-#~ msgstr "Postavljen maksimalan broj privremenih markera"
