--- a/bluefish/po/it.po
+++ b/bluefish/po/it.po
@@ -7,14 +7,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bluefish gtk2-port\n"
-"POT-Creation-Date: 2004-03-24 19:10+0100\n"
-"PO-Revision-Date: 2004-03-07 17:52+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-27 13:15-0300\n"
+"PO-Revision-Date: 2004-03-27 11:40+0100\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: ../src/about.c:123
 msgid ""
@@ -121,6 +121,9 @@ msgid ""
 "  Brazilian Portuguese - Anderson Rocha\n"
 "   <anderson@maxlinux.com.br>\n"
 "\n"
+"  Bulgarian - Peio Popov\n"
+"   <peio@peio.org>\n"
+"\n"
 "  Chinese - Ting Yang (Dormouse)\n"
 "   <mouselinux@163.com>\n"
 "\n"
@@ -142,6 +145,9 @@ msgid ""
 "  Italian - Stefano Canepa\n"
 "   <sc@linux.it>\n"
 "\n"
+"  Norwegian - Christian Tellefsen\n"
+"   <chris@tellefsen.net>\n"
+"\n"
 "  Polish - Oskar Swida\n"
 "   <swida@aragorn.pb.bialystok.pl>\n"
 "\n"
@@ -149,7 +155,7 @@ msgid ""
 "   <lopopizarro@netcabo.pt>\n"
 "\n"
 "  Russian - Eugene Rupakov\n"
-"   <rupakov@jet.msk.ru>\n"
+"   <rupakov@jet.msk.su>\n"
 "\n"
 "  Serbian - Marko Milenović\n"
 "   <raven@sbb.co.yu>\n"
@@ -166,6 +172,9 @@ msgid ""
 msgstr ""
 "Attuali traduttori:\n"
 "\n"
+"  Bulgaro - Peio Popov\n"
+"   <peio@peio.org>\n"
+"\n"
 "  Cinese - Ting Yang (Dormouse)\n"
 "   <mouselinux@163.com>\n"
 "\n"
@@ -181,6 +190,9 @@ msgstr ""
 "  Italiano - Stefano Canepa\n"
 "   <sc@linux.it>\n"
 "\n"
+"  Novergese  - Christian Tellefsen\n"
+"   <chris@tellefsen.net>\n"
+"\n"
 "  Polacco - Oskar Swida\n"
 "   <swida@aragorn.pb.bialystok.pl>\n"
 "\n"
@@ -191,9 +203,9 @@ msgstr ""
 "   <anderson@maxlinux.com.br>\n"
 "\n"
 "  Russo - Eugene Rupakov\n"
-"   <rupakov@jet.msk.ru>\n"
+"   <rupakov@jet.msk.su>\n"
 "\n"
-"  Serbio - Marko Milenović\n"
+"  Serbo - Marko Milenović\n"
 "   <raven@sbb.co.yu>\n"
 "\n"
 "  Spagnolo - Walter Oscar Echarri\n"
@@ -212,20 +224,20 @@ msgstr ""
 "   <sasek@ccsystem.hu>\n"
 "\n"
 
-#: ../src/about.c:194
+#: ../src/about.c:198
 msgid "About Bluefish"
 msgstr "Bluefish"
 
-#: ../src/about.c:226 ../src/fref.c:1416 ../src/fref.c:1700 ../src/fref.c:1787
+#: ../src/about.c:230 ../src/fref.c:1416 ../src/fref.c:1700 ../src/fref.c:1787
 #: ../src/fref.c:1822 ../src/fref.c:2296
 msgid "Info"
 msgstr "Informazioni"
 
-#: ../src/about.c:228
+#: ../src/about.c:232
 msgid "Authors"
 msgstr "Autori"
 
-#: ../src/about.c:229
+#: ../src/about.c:233
 msgid "Translators"
 msgstr "Traduttori"
 
@@ -257,6 +269,8 @@ msgid ""
 "Bluefish has trouble reading the filenames. Try to set the environment "
 "variable G_BROKEN_FILENAMES=1\n"
 msgstr ""
+"Sono occorsi errori nel leggere i nomi dei file. Provare a impostare la "
+"variabile di ambiente G_BROKEN_FILENAMES=1\n"
 
 #: ../src/bfspell.c:346
 msgid "Check Spelling"
@@ -423,59 +437,52 @@ msgstr "Impossibile scrivere il file \"%s\"."
 msgid "This bookmark is set in a file that no longer exists."
 msgstr "Questo segnalibro è impostato in un file che non esiste più."
 
-#: ../src/bookmark.c:442
-#, fuzzy, c-format
+#: ../src/bookmark.c:443
+#, c-format
 msgid "Do you really want to delete %s?"
 msgstr "Rimuovere %s?"
 
-#: ../src/bookmark.c:444
+#: ../src/bookmark.c:445
 msgid "Delete permanent bookmark."
 msgstr "Cancella segnalibro permanente"
 
-#: ../src/bookmark.c:461
-#, fuzzy
+#: ../src/bookmark.c:462
 msgid "Edit bookmark"
-msgstr "Vai al segnalibro"
+msgstr "Modifica il segnalibro"
 
-#: ../src/bookmark.c:469
+#: ../src/bookmark.c:470
 msgid "Goto bookmark"
 msgstr "Vai al segnalibro"
 
-#: ../src/bookmark.c:477
-#, fuzzy
+#: ../src/bookmark.c:478
 msgid "Edit"
-msgstr "/_Modifica"
+msgstr "Modifica"
 
-#: ../src/bookmark.c:481
+#: ../src/bookmark.c:482
 msgid "Delete"
 msgstr "Cancella"
 
-#: ../src/bookmark.c:903 ../src/bookmark.c:938 ../src/document.c:1987
-#, fuzzy
+#: ../src/bookmark.c:904 ../src/bookmark.c:939 ../src/document.c:1987
 msgid "Add bookmark"
-msgstr "Vai al segnalibro"
+msgstr "Aggiungi il segnalibro"
 
-#: ../src/bookmark.c:904
-#, fuzzy
+#: ../src/bookmark.c:905
 msgid "Cannot add bookmarks in unnamed files."
-msgstr ""
-"Impossibile aggiungere un segnalibro a un file senza nome.\n"
-"Salvare il file prima di riprovare."
+msgstr "Impossibile aggiungere segnalibri a un file senza nome."
 
-#: ../src/bookmark.c:939
+#: ../src/bookmark.c:940
 msgid "You already have a bookmark here!"
 msgstr "Segnalibro già presente"
 
-#: ../src/bookmark.c:944
-#, fuzzy
+#: ../src/bookmark.c:945
 msgid "default"
-msgstr "Imposta come predef_inito"
+msgstr "predefinito"
 
-#: ../src/bookmark.c:974
+#: ../src/bookmark.c:975
 msgid "temp"
-msgstr ""
+msgstr "temp"
 
-#: ../src/bookmark.c:1042
+#: ../src/bookmark.c:1043
 #, c-format
 msgid ""
 "Character count changed in file\n"
@@ -484,10 +491,9 @@ msgstr ""
 "Il numero di caratteri nel file è cambiato\n"
 " %s."
 
-#: ../src/bookmark.c:1044
-#, fuzzy
+#: ../src/bookmark.c:1045
 msgid "Bookmarks positions could be incorrect."
-msgstr "La poszione dei segnalibri è cambiata."
+msgstr "La posizione dei segnalibri potrebbe essere scorretta"
 
 #: ../src/document.c:254 ../src/gui.c:936 ../src/gui.c:937
 msgid "/Document/Highlight Syntax"
@@ -1571,6 +1577,55 @@ msgstr "/Visualizza/Barra principale"
 msgid "/View/View Custom Menu"
 msgstr "/Visualizza/Barra personalizzata"
 
+#: ../src/html2.c:554
+msgid "Cascading StyleSheet dialog"
+msgstr "Fogli di stile a cascata"
+
+#: ../src/html2.c:574
+msgid "_Selector:"
+msgstr "_Selettore:"
+
+#: ../src/html2.c:593
+msgid "_Property:"
+msgstr "_Proprietà:"
+
+#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
+#: ../src/html_form.c:894
+msgid "_Value:"
+msgstr "_Valore:"
+
+#: ../src/html2.c:613
+msgid "Selector"
+msgstr "Selettore"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Property"
+msgstr "Proprietà"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Value"
+msgstr "Valore"
+
+#: ../src/html2.c:631
+msgid " _Add "
+msgstr " _Aggiungi "
+
+#: ../src/html2.c:634
+msgid " _Update "
+msgstr " _Aggiorna "
+
+#: ../src/html2.c:637
+msgid " _Delete "
+msgstr " _Cancella "
+
+#: ../src/html2.c:893 ../src/html2.c:930
+msgid "_Style..."
+msgstr "_Stile..."
+
+#: ../src/html2.c:1087
+msgid "Bluefish: Select color"
+msgstr "Bluefish: selezionare colore"
+
 #: ../src/html.c:356
 msgid "Insert Time"
 msgstr "Inserire l'ora"
@@ -1965,55 +2020,6 @@ msgstr "Lingu_a:"
 msgid "_Custom:"
 msgstr "Perso_nalizzato:"
 
-#: ../src/html2.c:554
-msgid "Cascading StyleSheet dialog"
-msgstr "Fogli di stile a cascata"
-
-#: ../src/html2.c:574
-msgid "_Selector:"
-msgstr "_Selettore:"
-
-#: ../src/html2.c:593
-msgid "_Property:"
-msgstr "_Proprietà:"
-
-#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
-#: ../src/html_form.c:894
-msgid "_Value:"
-msgstr "_Valore:"
-
-#: ../src/html2.c:613
-msgid "Selector"
-msgstr "Selettore"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Property"
-msgstr "Proprietà"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Value"
-msgstr "Valore"
-
-#: ../src/html2.c:631
-msgid " _Add "
-msgstr " _Aggiungi "
-
-#: ../src/html2.c:634
-msgid " _Update "
-msgstr " _Aggiorna "
-
-#: ../src/html2.c:637
-msgid " _Delete "
-msgstr " _Cancella "
-
-#: ../src/html2.c:893 ../src/html2.c:930
-msgid "_Style..."
-msgstr "_Stile..."
-
-#: ../src/html2.c:1087
-msgid "Bluefish: Select color"
-msgstr "Bluefish: selezionare colore"
-
 #: ../src/html_form.c:141
 msgid "Form"
 msgstr "Form"
@@ -2407,14 +2413,12 @@ msgid "/Edit/Replace special/_Both Types to HTML Entities"
 msgstr "/Modifica/Sostituisci speciale/_Entrambi i tipi in entità HTML"
 
 #: ../src/menu.c:362
-#, fuzzy
 msgid "/Edit/Replace special/To _Uppercase"
-msgstr "/Edit/Sostituisci speciale/Tearoff1"
+msgstr "/Edit/Sostituisci speciale/In _maiuscolo"
 
 #: ../src/menu.c:363
-#, fuzzy
 msgid "/Edit/Replace special/To _Lowercase"
-msgstr "/Edit/Sostituisci speciale/Tearoff1"
+msgstr "/Edit/Sostituisci speciale/In min_uscolo"
 
 #: ../src/menu.c:364
 msgid "/Edit/sep4"
@@ -2433,14 +2437,12 @@ msgid "/Edit/sep5"
 msgstr "/Modifica/sep5"
 
 #: ../src/menu.c:368
-#, fuzzy
 msgid "/Edit/Add _Bookmark"
-msgstr "/_Segnalibri"
+msgstr "/Modifica/Aggiungi_segnalibro"
 
 #: ../src/menu.c:369
-#, fuzzy
 msgid "/Edit/sep6"
-msgstr "/Modifica/sep1"
+msgstr "/Modifica/sep6"
 
 #: ../src/menu.c:370
 msgid "/Edit/_Save Settings"
@@ -3582,9 +3584,8 @@ msgid "/Project/Save _as..."
 msgstr "/Progetto/Salv_a con nome..."
 
 #: ../src/menu.c:686
-#, fuzzy
 msgid "/Project/Save & _close"
-msgstr "/Progetto/Salv_a con nome..."
+msgstr "/Progetto/Salv_a e chiudi"
 
 #: ../src/menu.c:687
 msgid "/Project/sep2"
@@ -4082,39 +4083,32 @@ msgid "Clear undo history on save"
 msgstr "Cancella la storia di annulla al salvataggio"
 
 #: ../src/preferences.c:1896
-#, fuzzy
 msgid "Bookmark options"
-msgstr "Segnalibri"
+msgstr "Opzioni segnalibri"
 
 #: ../src/preferences.c:1901
-#, fuzzy
-msgid "Sort by filename"
-msgstr "Nessun nome del file"
+msgid "Sort by line number"
+msgstr "Ordina per numero di riga"
 
 #: ../src/preferences.c:1902
-#, fuzzy
 msgid "Make permanent by default"
-msgstr "Mostra il pannello laterale in modo predefinito"
+msgstr "Rendi permanente modo predefinito"
 
 #: ../src/preferences.c:1904
-#, fuzzy
 msgid "full path"
-msgstr "Percorso del menù"
+msgstr "percorso completo"
 
 #: ../src/preferences.c:1904
-#, fuzzy
 msgid "path from basedir"
-msgstr "Directory di base predefinita"
+msgstr "percorso dalla directory di base"
 
 #: ../src/preferences.c:1904
-#, fuzzy
 msgid "filename"
-msgstr "Nessun nome del file"
+msgstr "nome del file"
 
 #: ../src/preferences.c:1905
-#, fuzzy
 msgid "Bookmarks filename display"
-msgstr "Il file inserito nei segnalibri è chiuso"
+msgstr "Mostra i nomi dei file dei segnalibri"
 
 #: ../src/preferences.c:1909
 msgid "HTML"
@@ -4381,9 +4375,8 @@ msgid "/Project/Save as..."
 msgstr "/Progetto/Salva con nome..."
 
 #: ../src/project.c:170
-#, fuzzy
 msgid "/Project/Save & close"
-msgstr "/Progetto/Salva"
+msgstr "/Progetto/Salva e chiudi"
 
 #: ../src/project.c:171
 msgid "/Project/Edit Project Options..."
