--- a/bluefish/po/da.po
+++ b/bluefish/po/da.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bluefish gtk2-port\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-27 13:15-0300\n"
+"POT-Creation-Date: 2004-03-29 14:55+0200\n"
 "PO-Revision-Date: 2004-03-27 13:56+0100\n"
 "Last-Translator: Rasmus Toftdahl Olesen <rto@pohldata.dk>\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8 bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: ../src/about.c:123
 msgid ""
@@ -1577,55 +1577,6 @@ msgstr "/Vis/Hoved Toolbar"
 msgid "/View/View Custom Menu"
 msgstr "/Vis/Brugerdefineret Menu"
 
-#: ../src/html2.c:554
-msgid "Cascading StyleSheet dialog"
-msgstr "Cascading StyleSheet dialog"
-
-#: ../src/html2.c:574
-msgid "_Selector:"
-msgstr "_Vælger:"
-
-#: ../src/html2.c:593
-msgid "_Property:"
-msgstr "_Egenskab:"
-
-#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
-#: ../src/html_form.c:894
-msgid "_Value:"
-msgstr "_Værdi:"
-
-#: ../src/html2.c:613
-msgid "Selector"
-msgstr "Vælger"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Property"
-msgstr "Egenskab"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Value"
-msgstr "Værdi"
-
-#: ../src/html2.c:631
-msgid " _Add "
-msgstr " _Tilføj "
-
-#: ../src/html2.c:634
-msgid " _Update "
-msgstr " _Opdatér "
-
-#: ../src/html2.c:637
-msgid " _Delete "
-msgstr " _Slet "
-
-#: ../src/html2.c:893 ../src/html2.c:930
-msgid "_Style..."
-msgstr "_Stil"
-
-#: ../src/html2.c:1087
-msgid "Bluefish: Select color"
-msgstr "Bluefish: Vælg farve"
-
 #: ../src/html.c:356
 msgid "Insert Time"
 msgstr "Indsæt tid"
@@ -2019,6 +1970,55 @@ msgstr "_Sprog:"
 #: ../src/html.c:2075
 msgid "_Custom:"
 msgstr "_Bruger:"
+
+#: ../src/html2.c:554
+msgid "Cascading StyleSheet dialog"
+msgstr "Cascading StyleSheet dialog"
+
+#: ../src/html2.c:574
+msgid "_Selector:"
+msgstr "_Vælger:"
+
+#: ../src/html2.c:593
+msgid "_Property:"
+msgstr "_Egenskab:"
+
+#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
+#: ../src/html_form.c:894
+msgid "_Value:"
+msgstr "_Værdi:"
+
+#: ../src/html2.c:613
+msgid "Selector"
+msgstr "Vælger"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Property"
+msgstr "Egenskab"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Value"
+msgstr "Værdi"
+
+#: ../src/html2.c:631
+msgid " _Add "
+msgstr " _Tilføj "
+
+#: ../src/html2.c:634
+msgid " _Update "
+msgstr " _Opdatér "
+
+#: ../src/html2.c:637
+msgid " _Delete "
+msgstr " _Slet "
+
+#: ../src/html2.c:893 ../src/html2.c:930
+msgid "_Style..."
+msgstr "_Stil"
+
+#: ../src/html2.c:1087
+msgid "Bluefish: Select color"
+msgstr "Bluefish: Vælg farve"
 
 #: ../src/html_form.c:141
 msgid "Form"
