--- a/bluefish/po/it.po
+++ b/bluefish/po/it.po
@@ -7,14 +7,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bluefish gtk2-port\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-27 13:15-0300\n"
+"POT-Creation-Date: 2004-03-29 14:55+0200\n"
 "PO-Revision-Date: 2004-03-27 11:40+0100\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: ../src/about.c:123
 msgid ""
@@ -1577,55 +1577,6 @@ msgstr "/Visualizza/Barra principale"
 msgid "/View/View Custom Menu"
 msgstr "/Visualizza/Barra personalizzata"
 
-#: ../src/html2.c:554
-msgid "Cascading StyleSheet dialog"
-msgstr "Fogli di stile a cascata"
-
-#: ../src/html2.c:574
-msgid "_Selector:"
-msgstr "_Selettore:"
-
-#: ../src/html2.c:593
-msgid "_Property:"
-msgstr "_Proprietà:"
-
-#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
-#: ../src/html_form.c:894
-msgid "_Value:"
-msgstr "_Valore:"
-
-#: ../src/html2.c:613
-msgid "Selector"
-msgstr "Selettore"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Property"
-msgstr "Proprietà"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Value"
-msgstr "Valore"
-
-#: ../src/html2.c:631
-msgid " _Add "
-msgstr " _Aggiungi "
-
-#: ../src/html2.c:634
-msgid " _Update "
-msgstr " _Aggiorna "
-
-#: ../src/html2.c:637
-msgid " _Delete "
-msgstr " _Cancella "
-
-#: ../src/html2.c:893 ../src/html2.c:930
-msgid "_Style..."
-msgstr "_Stile..."
-
-#: ../src/html2.c:1087
-msgid "Bluefish: Select color"
-msgstr "Bluefish: selezionare colore"
-
 #: ../src/html.c:356
 msgid "Insert Time"
 msgstr "Inserire l'ora"
@@ -2019,6 +1970,55 @@ msgstr "Lingu_a:"
 #: ../src/html.c:2075
 msgid "_Custom:"
 msgstr "Perso_nalizzato:"
+
+#: ../src/html2.c:554
+msgid "Cascading StyleSheet dialog"
+msgstr "Fogli di stile a cascata"
+
+#: ../src/html2.c:574
+msgid "_Selector:"
+msgstr "_Selettore:"
+
+#: ../src/html2.c:593
+msgid "_Property:"
+msgstr "_Proprietà:"
+
+#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
+#: ../src/html_form.c:894
+msgid "_Value:"
+msgstr "_Valore:"
+
+#: ../src/html2.c:613
+msgid "Selector"
+msgstr "Selettore"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Property"
+msgstr "Proprietà"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Value"
+msgstr "Valore"
+
+#: ../src/html2.c:631
+msgid " _Add "
+msgstr " _Aggiungi "
+
+#: ../src/html2.c:634
+msgid " _Update "
+msgstr " _Aggiorna "
+
+#: ../src/html2.c:637
+msgid " _Delete "
+msgstr " _Cancella "
+
+#: ../src/html2.c:893 ../src/html2.c:930
+msgid "_Style..."
+msgstr "_Stile..."
+
+#: ../src/html2.c:1087
+msgid "Bluefish: Select color"
+msgstr "Bluefish: selezionare colore"
 
 #: ../src/html_form.c:141
 msgid "Form"
