--- a/bluefish/po/sr.po
+++ b/bluefish/po/sr.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: true_sr\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-26 01:19-0300\n"
+"POT-Creation-Date: 2004-03-29 14:55+0200\n"
 "PO-Revision-Date: 2004-03-27 00:47+0100\n"
 "Last-Translator: Marko Milenović <raven@sbb.co.yu>\n"
 "Language-Team: not a member <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.0.2\n"
 
 #: ../src/about.c:123
@@ -268,8 +268,8 @@ msgid ""
 "Bluefish has trouble reading the filenames. Try to set the environment "
 "variable G_BROKEN_FILENAMES=1\n"
 msgstr ""
-"Bluefish ima problema da pročita imena datoteka. Pokušajte da podesite okruženje "
-"za promenljivu G_BROKEN_FILENAMES=1\n"
+"Bluefish ima problema da pročita imena datoteka. Pokušajte da podesite "
+"okruženje za promenljivu G_BROKEN_FILENAMES=1\n"
 
 #: ../src/bfspell.c:346
 msgid "Check Spelling"
@@ -435,52 +435,52 @@ msgstr "Nemoguće pisanje u datoteku \"%s\"."
 msgid "This bookmark is set in a file that no longer exists."
 msgstr "Marker je postavljen u datoteku koja više ne postoji."
 
-#: ../src/bookmark.c:442
+#: ../src/bookmark.c:443
 #, c-format
 msgid "Do you really want to delete %s?"
 msgstr "Da li stvarno želite da izbrišete %s?"
 
-#: ../src/bookmark.c:444
+#: ../src/bookmark.c:445
 msgid "Delete permanent bookmark."
 msgstr "Obriši stalni marker."
 
-#: ../src/bookmark.c:461
+#: ../src/bookmark.c:462
 msgid "Edit bookmark"
 msgstr "Uredi maker"
 
-#: ../src/bookmark.c:469
+#: ../src/bookmark.c:470
 msgid "Goto bookmark"
 msgstr "Idi na marker"
 
-#: ../src/bookmark.c:477
+#: ../src/bookmark.c:478
 msgid "Edit"
 msgstr "Uredi"
 
-#: ../src/bookmark.c:481
+#: ../src/bookmark.c:482
 msgid "Delete"
 msgstr "Obriši"
 
-#: ../src/bookmark.c:903 ../src/bookmark.c:938 ../src/document.c:1987
+#: ../src/bookmark.c:904 ../src/bookmark.c:939 ../src/document.c:1987
 msgid "Add bookmark"
 msgstr "Dodaj marker"
 
-#: ../src/bookmark.c:904
+#: ../src/bookmark.c:905
 msgid "Cannot add bookmarks in unnamed files."
 msgstr "Nemoguće je dodati marker u bezimene datoteke."
 
-#: ../src/bookmark.c:939
+#: ../src/bookmark.c:940
 msgid "You already have a bookmark here!"
 msgstr "Već imate marker ovde!"
 
-#: ../src/bookmark.c:944
+#: ../src/bookmark.c:945
 msgid "default"
 msgstr "osnovni"
 
-#: ../src/bookmark.c:974
+#: ../src/bookmark.c:975
 msgid "temp"
 msgstr "privremeno"
 
-#: ../src/bookmark.c:1042
+#: ../src/bookmark.c:1043
 #, c-format
 msgid ""
 "Character count changed in file\n"
@@ -489,7 +489,7 @@ msgstr ""
 "Broj karaktera promenjen u datoteci\n"
 " %s"
 
-#: ../src/bookmark.c:1044
+#: ../src/bookmark.c:1045
 msgid "Bookmarks positions could be incorrect."
 msgstr "Pozicije markera su možda pogrešne."
 
@@ -734,7 +734,8 @@ msgstr ""
 
 #: ../src/document.c:2583
 msgid "Do you want to save the changes made to this untitled file?"
-msgstr "Žeite li da sačuvate prepravke načinjene na ovoj neimenovanoj datoteci?"
+msgstr ""
+"Žeite li da sačuvate prepravke načinjene na ovoj neimenovanoj datoteci?"
 
 #: ../src/document.c:2587
 msgid "Do_n't save"
@@ -1032,7 +1033,8 @@ msgstr "Greška"
 msgid ""
 "Perhaps you didn't load a reference, or you did not select a reference to "
 "search in."
-msgstr "Možda niste učitali reference ili niste izabrali referencu za pretragu."
+msgstr ""
+"Možda niste učitali reference ili niste izabrali referencu za pretragu."
 
 #: ../src/fref.c:2282
 msgid "Show info window"
@@ -1575,55 +1577,6 @@ msgstr "/Pogledaj/Pogledaj Glavni meni"
 msgid "/View/View Custom Menu"
 msgstr "/Pogledaj/Pogledaj lični meni"
 
-#: ../src/html2.c:554
-msgid "Cascading StyleSheet dialog"
-msgstr "CSS meni"
-
-#: ../src/html2.c:574
-msgid "_Selector:"
-msgstr "_Birač:"
-
-#: ../src/html2.c:593
-msgid "_Property:"
-msgstr "_Osobine:"
-
-#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
-#: ../src/html_form.c:894
-msgid "_Value:"
-msgstr "_Vrednost:"
-
-#: ../src/html2.c:613
-msgid "Selector"
-msgstr "Birač"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Property"
-msgstr "Osobine"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Value"
-msgstr "Vrednost"
-
-#: ../src/html2.c:631
-msgid " _Add "
-msgstr " _Dodaj "
-
-#: ../src/html2.c:634
-msgid " _Update "
-msgstr " _Ažuriraj "
-
-#: ../src/html2.c:637
-msgid " _Delete "
-msgstr " _Obriši "
-
-#: ../src/html2.c:893 ../src/html2.c:930
-msgid "_Style..."
-msgstr " _Stil..."
-
-#: ../src/html2.c:1087
-msgid "Bluefish: Select color"
-msgstr "Bluefish birač boja"
-
 #: ../src/html.c:356
 msgid "Insert Time"
 msgstr "Ubaci vreme"
@@ -2017,6 +1970,55 @@ msgstr "Jezik:"
 #: ../src/html.c:2075
 msgid "_Custom:"
 msgstr "_Lični:"
+
+#: ../src/html2.c:554
+msgid "Cascading StyleSheet dialog"
+msgstr "CSS meni"
+
+#: ../src/html2.c:574
+msgid "_Selector:"
+msgstr "_Birač:"
+
+#: ../src/html2.c:593
+msgid "_Property:"
+msgstr "_Osobine:"
+
+#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
+#: ../src/html_form.c:894
+msgid "_Value:"
+msgstr "_Vrednost:"
+
+#: ../src/html2.c:613
+msgid "Selector"
+msgstr "Birač"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Property"
+msgstr "Osobine"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Value"
+msgstr "Vrednost"
+
+#: ../src/html2.c:631
+msgid " _Add "
+msgstr " _Dodaj "
+
+#: ../src/html2.c:634
+msgid " _Update "
+msgstr " _Ažuriraj "
+
+#: ../src/html2.c:637
+msgid " _Delete "
+msgstr " _Obriši "
+
+#: ../src/html2.c:893 ../src/html2.c:930
+msgid "_Style..."
+msgstr " _Stil..."
+
+#: ../src/html2.c:1087
+msgid "Bluefish: Select color"
+msgstr "Bluefish birač boja"
 
 #: ../src/html_form.c:141
 msgid "Form"
@@ -3632,7 +3634,8 @@ msgstr "/Prozori"
 
 #: ../src/menu.c:1252
 msgid "Could not view file in browser, the file does not yet have a name\n"
-msgstr "Nemoguće je pogledati datoteku u pretraživaču, datoteka još uvek nema ime\n"
+msgstr ""
+"Nemoguće je pogledati datoteku u pretraživaču, datoteka još uvek nema ime\n"
 
 #: ../src/menu.c:1365
 msgid "/External/Outputbox/"
@@ -4681,5 +4684,3 @@ msgstr "Kod:"
 #: ../src/wizards.c:223
 msgid "Size:"
 msgstr "Veličina:"
-
-
