--- a/bluefish/po/zh_CN.po
+++ b/bluefish/po/zh_CN.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bluefish\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-27 13:15-0300\n"
+"POT-Creation-Date: 2004-03-29 14:55+0200\n"
 "PO-Revision-Date: 2004-03-27 16:02+0200\n"
 "Last-Translator: Funda Wang <fundawang@linux.net.cn>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: ../src/about.c:123
 msgid ""
@@ -1563,55 +1563,6 @@ msgstr "/查看(V)/显示主工具栏"
 msgid "/View/View Custom Menu"
 msgstr "/查看(V)/显示自定义菜单"
 
-#: ../src/html2.c:554
-msgid "Cascading StyleSheet dialog"
-msgstr "连续样式表对话框"
-
-#: ../src/html2.c:574
-msgid "_Selector:"
-msgstr "选择(_S)："
-
-#: ../src/html2.c:593
-msgid "_Property:"
-msgstr "属性(_P)："
-
-#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
-#: ../src/html_form.c:894
-msgid "_Value:"
-msgstr "值(_V)："
-
-#: ../src/html2.c:613
-msgid "Selector"
-msgstr "选择器"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Property"
-msgstr "属性"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Value"
-msgstr "值"
-
-#: ../src/html2.c:631
-msgid " _Add "
-msgstr " 添加(_A) "
-
-#: ../src/html2.c:634
-msgid " _Update "
-msgstr " 更新(_U) "
-
-#: ../src/html2.c:637
-msgid " _Delete "
-msgstr " 删除(_D) "
-
-#: ../src/html2.c:893 ../src/html2.c:930
-msgid "_Style..."
-msgstr "样式(_S)..."
-
-#: ../src/html2.c:1087
-msgid "Bluefish: Select color"
-msgstr "Bluefish：选择颜色"
-
 #: ../src/html.c:356
 msgid "Insert Time"
 msgstr "插入时间"
@@ -2005,6 +1956,55 @@ msgstr "L_ang："
 #: ../src/html.c:2075
 msgid "_Custom:"
 msgstr "自定义(_C)："
+
+#: ../src/html2.c:554
+msgid "Cascading StyleSheet dialog"
+msgstr "连续样式表对话框"
+
+#: ../src/html2.c:574
+msgid "_Selector:"
+msgstr "选择(_S)："
+
+#: ../src/html2.c:593
+msgid "_Property:"
+msgstr "属性(_P)："
+
+#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
+#: ../src/html_form.c:894
+msgid "_Value:"
+msgstr "值(_V)："
+
+#: ../src/html2.c:613
+msgid "Selector"
+msgstr "选择器"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Property"
+msgstr "属性"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Value"
+msgstr "值"
+
+#: ../src/html2.c:631
+msgid " _Add "
+msgstr " 添加(_A) "
+
+#: ../src/html2.c:634
+msgid " _Update "
+msgstr " 更新(_U) "
+
+#: ../src/html2.c:637
+msgid " _Delete "
+msgstr " 删除(_D) "
+
+#: ../src/html2.c:893 ../src/html2.c:930
+msgid "_Style..."
+msgstr "样式(_S)..."
+
+#: ../src/html2.c:1087
+msgid "Bluefish: Select color"
+msgstr "Bluefish：选择颜色"
 
 #: ../src/html_form.c:141
 msgid "Form"
